--- a/WeatherPy/Weather.ipynb
+++ b/WeatherPy/Weather.ipynb
@@ -1024,6 +1024,7 @@
     }
    ],
    "source": [
+    "# Get a lay of the land\n",
     "weather_dataframe.count()"
    ]
   },
@@ -1169,6 +1170,7 @@
     }
    ],
    "source": [
+    "# Show the dataframe\n",
     "weather_dataframe.head()"
    ]
   },
@@ -1187,7 +1189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# switches to seaborn default display\n",
+    "# Switch to seaborn default display\n",
     "sns.set()"
    ]
   },
@@ -1197,7 +1199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# gets current date\n",
+    "# Get current date\n",
     "cur_date = datetime.now()                                                    "
    ]
   },
@@ -1251,6 +1253,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The graph is showing that as you get further away from the equator (both northward and southward) the temperature rises."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Latitude vs. Humidity Plot"
    ]
   },
@@ -1295,6 +1304,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The graph shows that humidity is pretty much everywhere. It doesn't appear to be directly tied to its relationship to the equator."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Latitude vs. Cloudiness"
    ]
   },
@@ -1302,7 +1318,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1333,6 +1349,13 @@
     "plt.gcf().text(.60, .255, 'Tropic of Cancer', fontsize=8, rotation='vertical')\n",
     "plt.savefig(\"figures/fig3.png\")\n",
     "plt.show()                                                                  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This graph shows that clouds happen. Their relationship to the equator is probably coincidence. They are more directly tied to weather fronts, barometric pressure and other weather conditions."
    ]
   },
   {
@@ -1377,6 +1400,13 @@
     "plt.gcf().text(.60, .255, 'Tropic of Cancer', fontsize=8, rotation='vertical')\n",
     "plt.savefig(\"figures/fig4.png\")\n",
     "plt.show()  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The graph shows wind speed is pretty evenly distributed. There does not to appear to be a correlation between wind speed and proximity to the equator."
    ]
   },
   {
@@ -1972,6 +2002,14 @@
    "source": [
     "Regression line equation is: y = -0.15x + 5.32\n",
     "The r-squared is: -0.3202157412030664\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Final Analysis:\n",
+    "After generating all the graphs, the only real correlation between the equator and weather conditions we analyzed is temperature vs. equator. Wind speed, humidity, cloudiness are all effected by a host of other conditions both directly and indirectly. It may well be that the relationship of temperature relative to the equator drives the prevalence and intensity of the other conditions. A symbiotic relationship, if you will."
    ]
   },
   {
